--- a/products.html
+++ b/products.html
@@ -114,7 +114,7 @@
         </div>
     </section>
 
-    <section class="d-none-desktop" style="background-color: #FFFADD; padding: 1rem; min-height: 400px;">
+    <section class="d-none-desktop slideDownMobile" style="background-color: #FFFADD; padding: 1rem; height: 750px; overflow: hidden;">
         <div class="container">
             <div>
                 <div class="col">
@@ -122,12 +122,18 @@
                 </div>
                 <div class="col content-text">
                     <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
-                    <h4 class="title text-left mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">G-Collect is an easy way to collect data</h4>
-                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">G-Collect is integrated into the Gringgo platform database to make it easy for you to find any type of data you need.</p>
-                    <p class="description">SWAI utilizes the concept of gamification in order to make it fun to learn about and engage with the importance of recycling, composting, and waste separation.</p>
-                    <p class="description"> All this while giving users basic education about what we should be doing with our waste. It’s available for download in google play (available only in Indonesia).</p>
-                    <p class="description"><strong>Why Gringgo?</strong></p>
-                    <p class="description">SWAI urges users to collect different necessary data through the utilization of missions (gamification) and the token economy concept (users can collect points and redeem attractive incentives). The app also provides users with educational content regarding waste segregation</p>
+                    <h4 class="title text-left mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 30px;margin-top: 0px;margin-bottom: 20px;color: #232323;">G-Collect is an easy way to collect data</h4>
+                    <div class="content-small">
+                        <p class="description">G-Collect is integrated into the Gringgo platform database to make it easy for you to find any type of data you need.</p>
+                    </div>
+                    <div class="content-large">
+                        <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">G-Collect is integrated into the Gringgo platform database to make it easy for you to find any type of data you need. We can even help you analyze the data so you'll have a better understanding of the current situation. With G-Collect, we digitize your data collection and analysis process, so all of your sustainability efforts will be more effective and efficient.</p>
+                        <p class="description"><strong>Helps with Data Analysis and Prediction to Increase Efficiency</strong></p>
+                        <p class="description">G-Collect is a data collection tool that helps you make better decisions. We use machine learning to help analyze your data and predict future outcomes. Eliminate guesswork by focusing on what matters with G-Collect.</p>
+                        <p class="description"><strong>Why Gringgo?</strong></p>
+                        <p class="description">The ability to gather data easily and the ability to analyze the data properly is the key to achieving better judgment of the existing situation. Above all, with G-Collect, we digitize data collection activity and help users analyze their data so they can focus on what matters.</p>
+                    </div>
+                    <a href="javascript:void(0)" class="button-learn-more mb-4" onclick="slideDownMobile(0)">Collapse</a>
                 </div>
             </div>
     </section>
@@ -159,7 +165,7 @@
         </div>
     </section>
 
-    <section class="d-none-desktop" style="background-color: #FBE2EB; padding: 1rem; min-height: 400px;">
+    <section class="d-none-desktop slideDownMobile" style="background-color: #FBE2EB; padding: 1rem; height: 750px; overflow: hidden;">
         <div class="container">
             <div>
                 <div class="col">
@@ -167,10 +173,18 @@
                 </div>
                 <div class="col content-text">
                     <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
-                    <h4 class="title text-left mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">Create a more sustainable future with SWAI</h4>
-                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">
-                        SWAI is a mobile application that promotes a change of behavior about sustainability and environment awareness.    
-                    </p>
+                    <h4 class="title text-left mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 30px;margin-top: 0px;margin-bottom: 20px;color: #232323;">Create a more sustainable future with SWAI</h4>
+                    <div class="content-small">
+                        <p class="description">SWAI utilizes the concept of gamification in order to make it fun to learn about and engage with the importance of recycling, composting, and waste separation.</p>
+                    </div>
+                    <div class="content-large">
+                        <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">G-Collect is integrated into the Gringgo platform database to make it easy for you to find any type of data you need.</p>
+                        <p class="description">SWAI utilizes the concept of gamification in order to make it fun to learn about and engage with the importance of recycling, composting, and waste separation.</p>
+                        <p class="description"> All this while giving users basic education about what we should be doing with our waste. It’s available for download in google play (available only in Indonesia).</p>
+                        <p class="description"><strong>Why Gringgo?</strong></p>
+                        <p class="description">SWAI urges users to collect different necessary data through the utilization of missions (gamification) and the token economy concept (users can collect points and redeem attractive incentives). The app also provides users with educational content regarding waste segregation</p>
+                    </div>
+                    <a href="javascript:void(0)" class="button-learn-more mb-4" onclick="slideDownMobile(1)">Collapse</a>
                 </div>
             </div>
     </section>
@@ -201,7 +215,7 @@
         </div>
     </section>
 
-    <section class="d-none-desktop" style="background-color: #D5F9F3; padding: 1rem; min-height: 400px;">
+    <section class="d-none-desktop slideDownMobile" style="background-color: #D5F9F3; padding: 1rem; height: 750px; overflow: hidden;">
         <div class="container">
             <div>
                 <div class="col">
@@ -209,10 +223,19 @@
                 </div>
                 <div class="col content-text">
                     <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
-                    <h4 class="title text-left mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">ENVI is the solution <br> to your sustainability woes</h4>
-                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">
-                        With ENVI, you can monitor the status of your on the ground operation with just a few clicks and changes. 
-                    </p>
+                    <h4 class="title text-left mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 30px;margin-top: 0px;margin-bottom: 20px;color: #232323;">ENVI is the solution <br> to your sustainability woes</h4>
+                    <div class="content-small">
+                        <p class="description">With ENVI, you can monitor the status of your on the ground operation with just a few clicks and changes. You can also track your progress on milestones and goals to help you measure impact and improve efficiency. ENVI makes sustainability easy.</p>
+                    </div>
+                    <div class="content-large">
+                        <p class="description">With ENVI, you can monitor the status of your on the ground operation with just a few clicks and changes. You can also track your progress on milestones and goals to help you measure impact and improve efficiency. ENVI makes sustainability easy.</p>
+
+                        <p class="description"><strong>Reduce Waste and Increase Transparency</strong></p>
+                        <p class="description">With ENVI, you can monitor the status of your on the ground operation with just a few clicks and changes. You can also track your progress on milestones and goals to help you measure impact and improve efficiency. ENVI makes sustainability easy.</p>
+                        <p class="description"><strong>Why Gringgo? </strong></p>
+                        <p class="description">With Gringgo’s ENVI, it becomes easier to collect and process data that will be used for assessing the sustainability of Indonesia. Our web dashboard and mobile application provide a tool that can be easily implemented in any project.</p>
+                    </div>
+                    <a href="javascript:void(0)" class="button-learn-more mb-4" onclick="slideDownMobile(2)">Collapse</a>
                 </div>
             </div>
     </section>
@@ -317,13 +340,15 @@
             setCondition();
 
             if (document.getElementsByClassName('slideDown')[ordered].classList.contains('open')) {
+                console.log('a')
                 document.getElementsByClassName('slideDown')[ordered].classList.remove('open');
                 document.getElementsByClassName('slideDown')[ordered].style.height = "400px";
                 document.getElementsByClassName('slideDown')[ordered].getElementsByClassName('content-large')[0].style.display = "none";
                 document.getElementsByClassName('slideDown')[ordered].getElementsByClassName('content-small')[0].style.display = "block";
             } else {
+                console.log('b')
                 document.getElementsByClassName('slideDown')[ordered].classList.add('open');
-                document.getElementsByClassName('slideDown')[ordered].style.height = "850px";
+                document.getElementsByClassName('slideDown')[ordered].style.height = "";
                 document.getElementsByClassName('slideDown')[ordered].getElementsByClassName('content-large')[0].style.display = "block";
                 document.getElementsByClassName('slideDown')[ordered].getElementsByClassName('content-small')[0].style.display = "none";
             }
@@ -334,11 +359,44 @@
             var slideDown = document.getElementsByClassName('slideDown');
             [].forEach.call(slideDown, function (it, index) {
 
-                document.getElementsByClassName('slideDown')[index].classList.remove('open');
+                // document.getElementsByClassName('slideDown')[index].classList.remove('open');
                 document.getElementsByClassName('slideDown')[index].style.height = "400px";
 
                 document.getElementsByClassName('slideDown')[index].getElementsByClassName('content-large')[0].style.display = "none";
                 document.getElementsByClassName('slideDown')[index].getElementsByClassName('content-small')[0].style.display = "block";
+            });
+
+        }
+
+        function slideDownMobile(ordered)
+        {
+            setConditionMobile();
+
+            if (document.getElementsByClassName('slideDownMobile')[ordered].classList.contains('open')) {
+                console.log('a')
+                document.getElementsByClassName('slideDownMobile')[ordered].classList.remove('open');
+                document.getElementsByClassName('slideDownMobile')[ordered].style.height = "750px";
+                document.getElementsByClassName('slideDownMobile')[ordered].getElementsByClassName('content-large')[0].style.display = "none";
+                document.getElementsByClassName('slideDownMobile')[ordered].getElementsByClassName('content-small')[0].style.display = "block";
+            } else {
+                console.log('b')
+                document.getElementsByClassName('slideDownMobile')[ordered].classList.add('open');
+                document.getElementsByClassName('slideDownMobile')[ordered].style.height = "";
+                document.getElementsByClassName('slideDownMobile')[ordered].getElementsByClassName('content-large')[0].style.display = "block";
+                document.getElementsByClassName('slideDownMobile')[ordered].getElementsByClassName('content-small')[0].style.display = "none";
+            }
+        }
+
+        function setConditionMobile()
+        {
+            var slideDown = document.getElementsByClassName('slideDownMobile');
+            [].forEach.call(slideDown, function (it, index) {
+
+                // document.getElementsByClassName('slideDownMobile')[index].classList.remove('open');
+                document.getElementsByClassName('slideDownMobile')[index].style.height = "750px";
+
+                document.getElementsByClassName('slideDownMobile')[index].getElementsByClassName('content-large')[0].style.display = "none";
+                document.getElementsByClassName('slideDownMobile')[index].getElementsByClassName('content-small')[0].style.display = "block";
             });
 
         }
