--- a/about.html
+++ b/about.html
@@ -407,7 +407,7 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                     <ul class="menu">
-                        <li>Environtment</li>
+                        <li>Environment</li>
                         <li>People</li>
                     </ul>
 
@@ -416,7 +416,7 @@
                     <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                     <ul class="menu">
                         <li>Privacy Policy</li>
-                        <li>Terms Conditions</li>
+                        <li>Terms & Conditions</li>
                     </ul>
                 </div>
                 <div>
@@ -451,7 +451,7 @@
                     <div class="col">
                         <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                         <ul class="menu">
-                            <li>Environtment</li>
+                            <li>Environment</li>
                             <li>People</li>
                         </ul>
                     </div>
@@ -461,7 +461,7 @@
                         <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                         <ul class="menu">
                             <li>Privacy Policy</li>
-                            <li>Terms Conditions</li>
+                            <li>Terms & Conditions</li>
                         </ul>
                     </div>
                     <div class="col">
