--- a/products.html
+++ b/products.html
@@ -260,7 +260,7 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                     <ul class="menu">
-                        <li>Environtment</li>
+                        <li>Environment</li>
                         <li>People</li>
                     </ul>
 
@@ -269,7 +269,7 @@
                     <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                     <ul class="menu">
                         <li>Privacy Policy</li>
-                        <li>Terms Conditions</li>
+                        <li>Terms & Conditions</li>
                     </ul>
                 </div>
                 <div>
@@ -304,7 +304,7 @@
                     <div class="col">
                         <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                         <ul class="menu">
-                            <li>Environtment</li>
+                            <li>Environment</li>
                             <li>People</li>
                         </ul>
                     </div>
@@ -314,7 +314,7 @@
                         <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                         <ul class="menu">
                             <li>Privacy Policy</li>
-                            <li>Terms Conditions</li>
+                            <li>Terms & Conditions</li>
                         </ul>
                     </div>
                     <div class="col">
