--- a/projects.html
+++ b/projects.html
@@ -200,7 +200,7 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                     <ul class="menu">
-                        <li>Environtment</li>
+                        <li>Environment</li>
                         <li>People</li>
                     </ul>
 
@@ -209,7 +209,7 @@
                     <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                     <ul class="menu">
                         <li>Privacy Policy</li>
-                        <li>Terms Conditions</li>
+                        <li>Terms & Conditions</li>
                     </ul>
                 </div>
                 <div>
