--- a/contactus.html
+++ b/contactus.html
@@ -88,7 +88,7 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                     <ul class="menu">
-                        <li>Environtment</li>
+                        <li>Environment</li>
                         <li>People</li>
                     </ul>
 
@@ -97,7 +97,7 @@
                     <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                     <ul class="menu">
                         <li>Privacy Policy</li>
-                        <li>Terms Conditions</li>
+                        <li>Terms & Conditions</li>
                     </ul>
                 </div>
                 <div>
@@ -132,7 +132,7 @@
                     <div class="col">
                         <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                         <ul class="menu">
-                            <li>Environtment</li>
+                            <li>Environment</li>
                             <li>People</li>
                         </ul>
                     </div>
@@ -142,7 +142,7 @@
                         <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                         <ul class="menu">
                             <li>Privacy Policy</li>
-                            <li>Terms Conditions</li>
+                            <li>Terms & Conditions</li>
                         </ul>
                     </div>
                     <div class="col">
