--- a/howitworks.html
+++ b/howitworks.html
@@ -194,7 +194,7 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                     <ul class="menu">
-                        <li>Environtment</li>
+                        <li>Environment</li>
                         <li>People</li>
                     </ul>
 
@@ -203,7 +203,7 @@
                     <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                     <ul class="menu">
                         <li>Privacy Policy</li>
-                        <li>Terms Conditions</li>
+                        <li>Terms & Conditions</li>
                     </ul>
                 </div>
                 <div>
@@ -238,7 +238,7 @@
                     <div class="col">
                         <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                         <ul class="menu">
-                            <li>Environtment</li>
+                            <li>Environment</li>
                             <li>People</li>
                         </ul>
                     </div>
@@ -248,7 +248,7 @@
                         <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                         <ul class="menu">
                             <li>Privacy Policy</li>
-                            <li>Terms Conditions</li>
+                            <li>Terms & Conditions</li>
                         </ul>
                     </div>
                     <div class="col">
