--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                     <ul class="menu">
-                        <li>Environtment</li>
+                        <li>Environment</li>
                         <li>People</li>
                     </ul>
 
@@ -341,7 +341,7 @@
                     <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                     <ul class="menu">
                         <li>Privacy Policy</li>
-                        <li>Terms Conditions</li>
+                        <li>Terms & Conditions</li>
                     </ul>
                 </div>
                 <div>
@@ -376,7 +376,7 @@
                     <div class="col">
                         <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                         <ul class="menu">
-                            <li>Environtment</li>
+                            <li>Environment</li>
                             <li>People</li>
                         </ul>
                     </div>
@@ -386,7 +386,7 @@
                         <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                         <ul class="menu">
                             <li>Privacy Policy</li>
-                            <li>Terms Conditions</li>
+                            <li>Terms & Conditions</li>
                         </ul>
                     </div>
                     <div class="col">
