--- a/products/envi-is-solution.html
+++ b/products/envi-is-solution.html
@@ -124,7 +124,7 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
                     <ul class="menu">
-                        <li>Environtment</li>
+                        <li>Environment</li>
                         <li>People</li>
                     </ul>
 
@@ -133,7 +133,7 @@
                     <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
                     <ul class="menu">
                         <li>Privacy Policy</li>
-                        <li>Terms Conditions</li>
+                        <li>Terms & Conditions</li>
                     </ul>
                 </div>
                 <div>
