--- a/about.html
+++ b/about.html
@@ -279,34 +279,70 @@
             <div class="mb-2"></div>
             <div class="d-none-desktop">
                 <div class="d-flex">
-                    <img src="assets/img/teams/g1.png" alt="1" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g2.png" alt="2" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g3.png" alt="3" class="m-1" style="width: 100%; overflow:hidden;">
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g1.png" alt="1" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g2.png" alt="2" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g3.png" alt="3" style="width: 100%;">
+                    </div>
                 </div>
                 <div class="d-flex">
-                    <img src="assets/img/teams/g4.png" alt="4" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g5.png" alt="5" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g6.png" alt="6" class="m-1" style="width: 100%; overflow:hidden;">
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g4.png" alt="4" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g5.png" alt="5" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g6.png" alt="6" style="width: 100%;">
+                    </div>
                 </div>
                 <div class="d-flex">
-                    <img src="assets/img/teams/g7.png" alt="7" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g8.png" alt="8" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g9.png" alt="9" class="m-1" style="width: 100%; overflow:hidden;">
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g7.png" alt="7" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g8.png" alt="8" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g9.png" alt="9" style="width: 100%;">
+                    </div>
                 </div>
                 <div class="d-flex">
-                    <img src="assets/img/teams/g10.png" alt="10" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g11.png" alt="11" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g12.png" alt="12" class="m-1" style="width: 100%; overflow:hidden;">
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g10.png" alt="10" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g11.png" alt="11" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g12.png" alt="12" style="width: 100%;">
+                    </div>
                 </div>
                 <div class="d-flex">
-                    <img src="assets/img/teams/g13.png" alt="13" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g14.png" alt="14" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g15.png" alt="15" class="m-1" style="width: 100%; overflow:hidden;">
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g13.png" alt="13" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g14.png" alt="14" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g15.png" alt="15" style="width: 100%;">
+                    </div>
                 </div>
                 <div class="d-flex">
-                    <img src="assets/img/teams/g16.png" alt="16" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="assets/img/teams/g17.png" alt="17" class="m-1" style="width: 100%; overflow:hidden;">
-                    <img src="" alt="18" class="m-1" style="width: 100%; overflow:hidden;">
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g16.png" alt="16" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        <img src="assets/img/teams/g17.png" alt="17" style="width: 100%;">
+                    </div>
+                    <div class="col" style="width: 100%; overflow:hidden;">
+                        
+                    </div>
                 </div>
             </div>
             <div class="d-none-mobile">
