fixing how it works

--- a/howitworks.html
+++ b/howitworks.html
@@ -71,8 +71,8 @@
     <section class="section_banner">
         <div class="container">
             <div class="d-flex mb-2">
-                <div class="col">
-                    <h2 class="title">How It Works</h2>
+                <div class="col align-self-center">
+                    <h2 class="title text-left">How It Works</h2>
                 </div>
                 <div class="col d-none-mobile">
                     <img src="assets/img/howitworks.png" alt="" style="margin-top: -75px; float: right;">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col content-text">
                     <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Sustainability Compliance</h4>
+                    <h4 class="title mt-2 text-left">Sustainability Compliance</h4>
                     <p class="description">Gringgo has developed a platform for companies to gather data, track and monitor their operations, and to achieve sustainability compliance using defined ESG metrics. This will help you stay compliant with global standards and ensure you stay ahead of the curve.</p>
                     <a href="how-it-works/sustainability-compliance.html" class="button-learn-more">LEARN MORE</a>
                 </div>
@@ -132,7 +132,7 @@
             <div class="d-flex">
                 <div class="col content-text">
                     <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Education on Sustainability</h4>
+                    <h4 class="title mt-2 text-left">Education on Sustainability</h4>
                     <p class="description">Our platform facilitates the necessary knowledge to build skills, awareness, values and activities surrounding sustainability. As part of the community that care, Gringgo developed a unique gamification methods to help more than 25,000 its users learn about different type of waste and how to deal with them.</p>
                     <a href="how-it-works/education-on-sustainability.html" class="button-learn-more">LEARN MORE</a>
                 </div>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col content-text">
                     <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Sustainability Program</h4>
+                    <h4 class="title mt-2 text-left">Sustainability Program</h4>
                     <p class="description">One important elements in creating solution for sustainability issue is community, through our platform we reached out to different communities and created different customized program to raise awareness about sustainability. </p>
                     <a href="how-it-works/sustainability-progmrams.html" class="button-learn-more">LEARN MORE</a>
                 </div>
