--- a/products/more-sustainable.html
+++ b/products/more-sustainable.html
@@ -24,44 +24,44 @@
                 <div class="left">
                     <img src="../assets/img/logo-gringgo.png" alt="logo_gringgi">
                 </div>
-                <div class="right">
-                    <a href="index.html" class="menu-item">
+                <div class="right d-none-mobile">
+                    <a href="../index.html" class="menu-item">
                         <span>Home</span>
                     </a>
-                    <a href="about.html" class="menu-item">
+                    <a href="../about.html" class="menu-item">
                         <span>About Us</span>
                     </a>
-                    <a href="howitworks.html" class="menu-item">
+                    <a href="../howitworks.html" class="menu-item">
                         <span>How It Works</span>
                     </a>
-                    <a href="products.html" class="menu-item">
+                    <a href="../products.html" class="menu-item">
                         <span>Products</span>
                     </a>
-                    <a href="contactus.html" class="menu-item text-active">
+                    <a href="../contactus.html" class="menu-item text-active">
                         <span>Contact Us</span>
                     </a>
                 </div>
                 <div class="right d-none-desktop" style="margin-top: -10px;" onclick="toggleMenu()">
-                    <img src="assets/img/ic_hamburger.png" alt="">
+                    <img src="../assets/img/ic_hamburger.png" alt="">
                 </div>
             </nav>
             <div class="menu-mobile d-none-desktop d-none" id="menuMobile">
                 <a href="javascript:void(0)" class="menu-item" onclick="toggleMenu()">
                     <span><strong>X</strong></span>
                 </a>
-                <a href="index.html" class="menu-item">
+                <a href="../index.html" class="menu-item">
                     <span>Home</span>
                 </a>
-                <a href="about.html" class="menu-item">
+                <a href="../about.html" class="menu-item">
                     <span>About Us</span>
                 </a>
-                <a href="howitworks.html" class="menu-item">
+                <a href="../howitworks.html" class="menu-item">
                     <span>How It Works</span>
                 </a>
-                <a href="products.html" class="menu-item">
+                <a href="../products.html" class="menu-item">
                     <span>Products</span>
                 </a>
-                <a href="contactus.html" class="menu-item">
+                <a href="../contactus.html" class="menu-item">
                     <span>Contact Us</span>
                 </a>
             </div>
@@ -75,7 +75,7 @@
                     <h2 class="title">How It Works</h2>
                     <a href="../contactus.html" class="button-learn-more">Contact Us</a>
                 </div>
-                <div class="col">
+                <div class="col d-none-mobile">
                     <img src="../assets/img/lamp.svg" alt="" style="margin-left: 10rem;">
                 </div>
             </div>
@@ -108,7 +108,7 @@
  
     
     <footer>
-        <div class="container">
+        <div class="container d-none-mobile">
             <div class="footer-contain">
                 <div>
                     <img src="../assets/img/logo-gringgo.png" alt="">
@@ -144,6 +144,52 @@
                     <img class="icon-sosmed" src="../assets/icon/youtube.png" alt="">
                     <img class="icon-sosmed" src="../assets/icon/facebook.png" alt="">
                     <img class="icon-sosmed" src="../assets/icon/instagram.png" alt="">
+                </div>
+            </div>
+            <div class="small-footer font-inter-regular">
+                <span>Gringgo©  2022</span>
+                <span> All Right Reserved</span>
+            </div>
+        </div>
+        <div class="container d-none-desktop">
+            <div class="footer-mobile">
+                <div>
+                    <img src="../assets/img/logo-gringgo.png" alt="">
+                    <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
+                        Gringgo is home to a new economic model for waste management that puts people and the planet first.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
+                        <ul class="menu">
+                            <li>About</li>
+                            <li>Contact Us</li>
+                            <li>Support Us</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
+                        <ul class="menu">
+                            <li>Environment</li>
+                            <li>People</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
+                        <ul class="menu">
+                            <li>Privacy Policy</li>
+                            <li>Terms & Conditions</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Connect Us</p>
+                        <img class="icon-sosmed" src="../assets/icon/youtube.png" alt="">
+                        <img class="icon-sosmed" src="../assets/icon/facebook.png" alt="">
+                        <img class="icon-sosmed" src="../assets/icon/instagram.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="small-footer font-inter-regular">
