--- a/contactus.html
+++ b/contactus.html
@@ -74,7 +74,7 @@
                 <div>
                     <img src="assets/img/logo-gringgo.png" alt="">
                     <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
-                        Gringgo is home to a new economic model for waste management that puts people and the planet first.
+                        Gringgo is the home to digital technology development to enable new economic model for sustainable development, that puts people and planet first.
                     </p>
                 </div>
                 <div>
@@ -117,7 +117,7 @@
                 <div>
                     <img src="assets/img/logo-gringgo.png" alt="">
                     <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
-                        Gringgo is home to a new economic model for waste management that puts people and the planet first.
+                        Gringgo is the home to digital technology development to enable new economic model for sustainable development, that puts people and planet first.
                     </p>
                 </div>
                 <div class="row">
