--- a/products/envi-is-solution.html
+++ b/products/envi-is-solution.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="d-flex mb-4">
                 <div class="col">
-                    <h2 class="title">How It Works</h2>
+                    <h2 class="title text-left">Our Products</h2>
                     <a href="../contactus.html" class="button-learn-more">Contact Us</a>
                 </div>
                 <div class="col d-none-mobile">
@@ -82,7 +82,7 @@
         </div>
     </section>
 
-    <section class="section_2_columns_with_image" style="background-color: #FFFADD; padding: 3rem;">
+    <section class="section_2_columns_with_image d-none-mobile" style="background-color: #D5F9F3; padding: 3rem;">
         <div class="container">
             <div class="d-flex">
                 <div class="col">
@@ -90,12 +90,31 @@
                 </div>
                 <div class="col content-text">
                     <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">G-Collect is an easy way to collect data</h4>
-                    <p class="description">G-Collect is integrated into the Gringgo platform database to make it easy for you to find any type of data you need. We can even help you analyze the data so you'll have a better understanding of the current situation. With G-Collect, we digitize your data collection and analysis process, so all of your sustainability efforts will be more effective and efficient.</p>
-                    <p class="description"><strong>Helps with Data Analysis and Prediction to Increase Efficiency</strong></p>
-                    <p class="description">G-Collect is a data collection tool that helps you make better decisions. We use machine learning to help analyze your data and predict future outcomes. Eliminate guesswork by focusing on what matters with G-Collect.</p>
+                    <h4 class="title text-left mt-2">ENVI is the solution to your sustainability woes</h4>
+                    <p class="description">With ENVI, you can monitor the status of your on the ground operation with just a few clicks and changes. You can also track your progress on milestones and goals to help you measure impact and improve efficiency. ENVI makes sustainability easy.</p>
+                    <p class="description"><strong>Reduce Waste and Increase Transparency</strong></p>
+                    <p class="description">ENVI is a sustainability platform that brings together data on the waste collected by collectors, the data of the locations where they collect the waste, and data on available recycling centers. </p>
                     <p class="description"><strong>Why Gringgo?</strong></p>
-                    <p class="description">The ability to gather data easily and the ability to analyze the data properly is the key to achieving better judgment of the existing situation. Above all, with G-Collect, we digitize data collection activity and help users analyze their data so they can focus on what matters.</p>
+                    <p class="description">With Gringgo’s ENVI, it becomes easier to collect and process data that will be used for assessing the sustainability of Indonesia. Our web dashboard and mobile application provide a tool that can be easily implemented in any project.</p>
+                    <a href="#" class="button-learn-more">Collapse</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section_2_columns_with_image d-none-desktop" style="background-color: #D5F9F3; padding: 3rem;">
+        <div class="container">
+            <div class="">
+                <div class="col">
+                    <img src="../assets/img/g-collect.png" alt="" style="width: 90%; height: inherit;">
+                </div>
+                <div class="col content-text">
+                    <h4 class="title mt-2">ENVI is the solution to your sustainability woes</h4>
+                    <p class="description">With ENVI, you can monitor the status of your on the ground operation with just a few clicks and changes. You can also track your progress on milestones and goals to help you measure impact and improve efficiency. ENVI makes sustainability easy.</p>
+                    <p class="description"><strong>Reduce Waste and Increase Transparency</strong></p>
+                    <p class="description">ENVI is a sustainability platform that brings together data on the waste collected by collectors, the data of the locations where they collect the waste, and data on available recycling centers. </p>
+                    <p class="description"><strong>Why Gringgo?</strong></p>
+                    <p class="description">With Gringgo’s ENVI, it becomes easier to collect and process data that will be used for assessing the sustainability of Indonesia. Our web dashboard and mobile application provide a tool that can be easily implemented in any project.</p>
                     <a href="#" class="button-learn-more">Collapse</a>
                 </div>
             </div>
@@ -109,7 +128,7 @@
                 <div>
                     <img src="../assets/img/logo-gringgo.png" alt="">
                     <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
-                        Gringgo is home to a new economic model for waste management that puts people and the planet first.
+                        Gringgo is the home to digital technology development to enable new economic model for sustainable development, that puts people and planet first.
                     </p>
                 </div>
                 <div>
@@ -152,7 +171,7 @@
                 <div>
                     <img src="../assets/img/logo-gringgo.png" alt="">
                     <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
-                        Gringgo is home to a new economic model for waste management that puts people and the planet first.
+                        Gringgo is the home to digital technology development to enable new economic model for sustainable development, that puts people and planet first.
                     </p>
                 </div>
                 <div class="row">
