update page about

--- a/about.html
+++ b/about.html
@@ -89,34 +89,35 @@
 
             <div class="d-none-desktop">
                 <div class="col">
-                    <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block;">
+                    <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block; overflow: hidden; width: 75vw !important;">
                         <img src="assets/icon/technology.png" alt="" srcset="">
-                        <h3 class="title text-center">Technology</h3>
+                        <h3 class="title text-center" style="font-size: 2rem !important;">Technology</h3>
                         <p class="subtitle text-center">Leveraging data-driven technology as a key to create better decision and improvements on any activities</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block;">
+                    <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block; overflow: hidden; width: 75vw !important;">
                         <img src="assets/icon/empowed.png" alt="" srcset="">
-                        <h3 class="title text-center">Empowerment</h3>
+                        <h3 class="title text-center" style="font-size: 2rem !important;">Empowerment</h3>
                         <p class="subtitle text-center">Empower, support and improve any processes that exist in the current communities.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block;">
+                    <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block; overflow: hidden; width: 75vw !important;">
                         <img src="assets/icon/community.png" alt="" srcset="">
-                        <h3 class="title text-center">Community</h3>
+                        <h3 class="title text-center" style="font-size: 2rem !important;">Community</h3>
                         <p class="subtitle text-center">Environmentally-aware communities,to be supported and leverage as away to form collaboration</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block;">
+                    <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block; overflow: hidden; width: 75vw !important;">
                         <img src="assets/icon/measurement.png" alt="" srcset="">
-                        <h3 class="title text-center">Measured</h3>
+                        <h3 class="title text-center" style="font-size: 2rem !important;">Measured</h3>
                         <p class="subtitle text-center">Creating a measured impact on every program or activity, and can be visualize through data.</p>
                     </div>
                 </div>
             </div>
+
             <div class="d-flex d-none-mobile">
                 <div class="col">
                     <div class="card box-shadow-dark text-center box-shadow-dark-dark m-1" style="display: inline-block;">
