update page contact us

--- a/contactus.html
+++ b/contactus.html
@@ -68,6 +68,79 @@
         </div>
     </header>
 
+    <section id="howCanWeHelp">
+        <div class="container">
+
+            <hr class="line-on-top-title">
+            <div class="mb-3"></div>
+            <h3 class="title">How Can We Help</h3>
+            <p class="subtitle">Drop us a message, and let's get connected</p>            
+
+            <form action="" method="post" class="form d-none-mobile">
+                <div class="d-flex justify-content-between">
+                    <div class="col">
+                        <input type="text" name="" id="" class="input-form" placeholder="Your name...">
+                    </div>
+                    <div class="col">
+                        <input type="text" name="" id="" class="input-form" placeholder="Your email address...">
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <div class="col">
+                        <input type="text" name="" id="" class="input-form" placeholder="Your phone number...">
+                    </div>
+                    <div class="col">
+                        <input type="text" name="" id="" class="input-form" placeholder="Your company...">
+                    </div>
+                </div>
+                <div>
+                    <div class="col">
+                        <input type="text" name="" id="" class="input-form" placeholder="Subject">
+                    </div>
+                </div>
+                <div>
+                    <div class="col">
+                        <textarea name="" id="" cols="30" rows="10" class="input-form" placeholder="Message"></textarea>
+                    </div>
+                </div>
+                <div>
+                    <div class="col">
+                        <input type="submit" class="button button-background-light" value="Get In Touch">
+                    </div>
+                </div>
+
+            </form>
+
+            <form action="" method="post" class="d-none-desktop" style="margin: 14px; margin-right: 22px;">
+                <div class="col">
+                    <input type="text" name="" id="" class="input-form" placeholder="Your name...">
+                </div>
+                <div class="col">
+                    <input type="text" name="" id="" class="input-form" placeholder="Your email address...">
+                </div>
+                <div class="d-flex justify-content-between">
+                </div>
+                <div class="col">
+                    <input type="text" name="" id="" class="input-form" placeholder="Your phone number...">
+                </div>
+                <div class="col">
+                    <input type="text" name="" id="" class="input-form" placeholder="Your company...">
+                </div>
+                <div class="col">
+                    <input type="text" name="" id="" class="input-form" placeholder="Subject">
+                </div>
+                <div class="col">
+                    <textarea name="" id="" cols="30" rows="10" class="input-form" placeholder="Message"></textarea>
+                </div>
+                <div class="col" style="margin-right: -10px;">
+                    <input type="submit" class="button button-background-light" value="Get In Touch">
+                </div>
+                
+
+            </form>
+        </div>
+    </section>
+
     <footer>
         <div class="container d-none-mobile">
             <div class="footer-contain">
